2011-01-04  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @despacho: Classe removida.
	
	* @resultado: Classe adicionada.
	
	* @ute/{ute,get,set,dump}.m (obj.cg): Propriedade renomeada para obj.co

2011-01-03  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @io/private/hco_.m ([DPAT]): Alteração do formato dos dados.
	(obj.tp): Alteração das dimensões.
	
	* @sistema/sistema.m (obj.tp): Alteração das dimensões.

	* @problema/verificar.m: Adicionada verificação da duração dos patamares.
	
2010-12-29  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/calcular_JP.m: Corrigido cálculo da Jacobiana.

	* @problema/private/calcular_HP.m: Adicionado suporte a patamares de carga.

	* @problema/private/calcular_Hg.m: Corrigido número de elementos não-nulos
	da matriz Hessiana das restrições.

	* @problema/private/extrair_Dx.m: Função adicionada.
	
	* @problema/private/extrair_Dy.m: Função adicionada.
	
	* @problema/private/extrair_Dz.m: Função adicionada.
	
	* @problema/private/obter_Dx.m: Função removida.

	* @problema/private/obter_Dy.m: Função removida.

	* @problema/private/obter_Dz.m: Função removida.
	
	* @problema/private/calcular_D.m: Construção da matriz otimizada.
	
	* @problema/private/calcular_Dy.m: Otimização da construção da matriz.

2010-12-28  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/desempacotar_lambdaa.m: Função adicionada.

	* @problema/private/desempacotar_lambdab.m: Função adicionada.

	* @problema/private/desempacotar_lambdac.m: Função adicionada.
	
	* @problema/private/extrair_lambdaa.m: Função adicionada.
	
	* @problema/private/extrair_lambdab.m: Função adicionada.
	
	* @problema/private/extrair_lambdac.m: Função adicionada.

	* @problema/private/obter_mlambda_a.m: Função removida.

	* @problema/private/obter_mlambda_b.m: Função removida.

	* @problema/private/obter_mlambda_c.m: Função removida.
	
	* @problema/private/obter_vlambda_a.m: Função removida.
	